--- a/ConfiguracionUsuarios/ListaUsuarios.xaml
+++ b/ConfiguracionUsuarios/ListaUsuarios.xaml
@@ -13,13 +13,30 @@
                 <RowDefinition Height="50"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
+                
+                
+                
 
 
             <Grid Background="#FF1885A1" Grid.Row="0" Margin="0">
-                <Rectangle Grid.Column="0" Stroke="#FFABADB3" >
-                    <!--<Rectangle.Fill>
+
+
+                    <Grid>
+                        <ToolBar Style="{DynamicResource MaterialDesignToolBar}" ClipToBounds="False">
+                            <Button ToolTip="Follow me on Twitter" >
+                                <materialDesign:PackIcon Kind="UserEdit" />
+                            </Button>
+                            <Button ToolTip="Save"> <materialDesign:PackIcon Kind="Search" />
+                            </Button>
+                            
+                        </ToolBar>
+                    </Grid>
+
+
+                    <!--<Rectangle Grid.Column="0" Stroke="#FFABADB3" >
+                    <Rectangle.Fill>
                     <SolidColorBrush Color="#FF1885A1"/>
-                </Rectangle.Fill>-->
+                </Rectangle.Fill>--><!--
                 </Rectangle>
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Stretch">
 
@@ -27,37 +44,37 @@
                         <Image Source="/ConfiguracionUsuarios;component/Resources/nuevo_64x64.png" Width="32" Height="32" />
                     </Button>
 
-                    <!--<Button x:Name="btnEliminarUsuario" Click="BtnEliminarUsuario_Click" Style="{StaticResource roundButtonTemplate48}" ToolTip="Exportar lista a planilla de cálculos (CTRL+X)"  HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="2,5,5,5" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}">
+                    --><!--<Button x:Name="btnEliminarUsuario" Click="BtnEliminarUsuario_Click" Style="{StaticResource roundButtonTemplate48}" ToolTip="Exportar lista a planilla de cálculos (CTRL+X)"  HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="2,5,5,5" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}">
                     <Image Source="/ConfiguracionUsuarios;component/Resources/quitar_64x64.png" Width="48" Height="48" />
                 </Button>-->
 
                     <!--<Button x:Name="btnBuscarPedido" Style="{StaticResource roundButtonTemplate32}" ToolTip="Buscar un pedido en la Base de Datos (CTRL+B)" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}">
                     <Image Source="/ConfiguracionUsuarios;component/Resources/lupa_64x64.png" VerticalAlignment="Center" HorizontalAlignment="Center" Width="28" Height="28" />
-                </Button>-->
+                </Button>--><!--
 
                     <Button x:Name="btnBuscarPedido" Style="{StaticResource roundButtonTemplate32gray}" ToolTip="Buscar un pedido en la Base de Datos (CTRL+B)" VerticalAlignment="Center" HorizontalAlignment="Center"  Margin="2,0,0,0" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}" Width="44" Height="44">
                         <Image Source="/IngresoPedidos;component/Resources/search.png" VerticalAlignment="Center" HorizontalAlignment="Center" Width="32" Height="32" />
                     </Button>
 
-                    <!--<Button x:Name="btnEditarPermisos" Click="btnEditarPermisos_Click" Style="{StaticResource roundButtonTemplate48}" ToolTip="Filtrar la lista por Estado (CTRL+F)" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2,5,5,5" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}">
+                    --><!--<Button x:Name="btnEditarPermisos" Click="btnEditarPermisos_Click" Style="{StaticResource roundButtonTemplate48}" ToolTip="Filtrar la lista por Estado (CTRL+F)" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2,5,5,5" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}">
                     <Image Source="/ConfiguracionUsuarios;component/Resources/lapiz_64x64.png" VerticalAlignment="Center" HorizontalAlignment="Center" Width="48" Height="48" />
-                </Button>-->
+                </Button>--><!--
 
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                    <!--<Border BorderThickness="0"  CornerRadius="12" Background="#225378" HorizontalAlignment="Right" Margin="0,0,5,0" VerticalAlignment="Center" Height="36">
+                    --><!--<Border BorderThickness="0"  CornerRadius="12" Background="#225378" HorizontalAlignment="Right" Margin="0,0,5,0" VerticalAlignment="Center" Height="36">
                     <Label Name="lblNombreUsuario" Content="Sebastian Sanchez" Margin="0" Foreground="#ECF0F1" VerticalContentAlignment="Center" TextOptions.TextFormattingMode="Display" Padding="5,0" HorizontalContentAlignment="Center"  Background="{x:Null}" FontFamily="Consolas" BorderBrush="{x:Null}" FontWeight="Bold"/>
                 </Border>-->
 
                     <!--<Button x:Name="btnCambiarContraseña" Style="{StaticResource roundButtonTemplate32}" ToolTip="Cambiar contraseña" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="5,5,2,5" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{DynamicResource {x:Static SystemColors.ControlDarkBrushKey}}" Width="36" Height="36">
                     <Image Source="/ConfiguracionUsuarios;component/Resources/llave_64x64.png" Width="32" Height="32" />
-                </Button>-->
+                </Button>--><!--
 
                     <Button x:Name="btnCerrarSesion" Style="{StaticResource roundButtonTemplate32}" ToolTip="Cerrar sesión" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="2,5,5,5" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}" Width="36" Height="36">
                         <Image Source="/ConfiguracionUsuarios;component/Resources/puerta_64x64.png" Width="32" Height="32" VerticalAlignment="Center" />
                     </Button>
 
-                </StackPanel>
+                </StackPanel>-->
             </Grid>
 
                 <DataGrid Name="dgUsuarios" AutoGenerateColumns="False" FontFamily="Consolas" FontSize="14" SelectionChanged="DgUsuarios_SelectionChanged" ColumnWidth="*" HeadersVisibility="Column" SelectionMode="Single" VerticalScrollBarVisibility="Visible" Margin="0" Padding="0,0,0,0" Grid.Row="1">
