--- a/ConfiguracionUsuarios/SupaWindow.xaml
+++ b/ConfiguracionUsuarios/SupaWindow.xaml
@@ -116,10 +116,10 @@
     </Window.Triggers>
 
     <!--<Grid Background="#FFDEDEDE">-->
-    <Grid Background="Green">
+    <Grid Name="maingrilla" Background="Transparent">
 
 
-        <Grid x:Name="GridMain" Margin="50,0,0,0" HorizontalAlignment="Stretch" Background="Red"/>
+        <Grid x:Name="GridMain" Margin="50,0,0,0" HorizontalAlignment="Stretch" Background="Transparent"/>
         <!--<Grid.ColumnDefinitions>
             <ColumnDefinition Width="79*"/>
             <ColumnDefinition Width="32*"/>
@@ -150,8 +150,8 @@
         <Grid x:Name="GridMenu" Width="50" HorizontalAlignment="Left" Background="#FF31577E">
             <Grid.Effect>
                 <DropShadowEffect BlurRadius="0" ShadowDepth="0" Color="#FFAEAEAE"/>
-            </Grid.Effect>
-            <StackPanel>
+                </Grid.Effect>
+                <StackPanel>
                 <Grid Height="50" Background="White" RenderTransformOrigin="0.5,0.5">
                     <Grid.RenderTransform>
                         <TransformGroup>
@@ -172,7 +172,14 @@
                     <!--<Image Height="80" VerticalAlignment="Bottom"/>-->
 
                 </Grid>
-                <ListView x:Name="ListViewMenu" Height="{Binding ElementName=GridMain, Path=Height, Mode=TwoWay}" Foreground="#FF5C99D6" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" SelectionChanged="ListViewMenu_SelectionChanged">
+                
+                <ListView x:Name="ListViewMenu" Height="{Binding ElementName=SupaWindows, Path=Height}" Foreground="#FF5C99D6" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" SelectionChanged="ListViewMenu_SelectionChanged">
+                    <ListViewItem x:Name="ItemConfiguration" Height="50">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="Settings" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Configuarción" VerticalAlignment="Center" Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
                     <ListViewItem x:Name="ItemHome" Height="50">
                         <StackPanel Orientation="Horizontal">
                             <materialDesign:PackIcon Kind="User" Height="25" Width="25" Margin="5"/>
