--- a/ConfiguracionUsuarios/App.xaml
+++ b/ConfiguracionUsuarios/App.xaml
@@ -318,7 +318,7 @@
 
         
 
-        <Style x:Key="DataGridContentCellCentering" TargetType="{x:Type DataGridCell}">
+        <!--<Style x:Key="DataGridContentCellCentering" TargetType="{x:Type DataGridCell}">
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type DataGridCell}">
@@ -328,7 +328,7 @@
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
-        </Style>
+        </Style>-->
 
         
 
