--- a/ConfiguracionUsuarios/ListaUsuarios.xaml
+++ b/ConfiguracionUsuarios/ListaUsuarios.xaml
@@ -13,27 +13,45 @@
                 <RowDefinition Height="50"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-                
-                
-                
 
 
-            <Grid Background="Transparent" Grid.Row="0" Margin="0">
 
 
-                        <Grid Background="#FF31577E">
-                        <StackPanel Background="Transparent" Orientation="Horizontal" Margin="5" >
-                        <!--<ToolBar Style="{DynamicResource MaterialDesignToolBar}" ClipToBounds="False" Background="Transparent">-->
-                            <Button ToolTip="Follow me on Twitter" Margin="0" Background="Transparent" BorderThickness="0">
-                                <materialDesign:PackIcon Kind="UserEdit" Foreground="LawnGreen"  Width="25" Height="25" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+
+                <Grid Background="#FF31577E" Grid.Row="0" Margin="0">
+
+
+                    <!--<ToolBar Background="#FF31577E">
+                        <StackPanel Background="Transparent" Orientation="Horizontal" Margin="5" >-->
+
+                    <ListView x:Name="ListViewMenu" Height="{Binding ElementName=SupaWindows, Path=Height}" Foreground="#FF5C99D6" Background="Transparent" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled">
+                        <StackPanel Orientation="Horizontal">
+                        <ListViewItem x:Name="ItemConfiguration" Height="50">
+                            <StackPanel Orientation="Horizontal">
+                                <materialDesign:PackIcon Kind="UserPlus" Height="25" Width="25" Margin="5"/>
+                                <!--<TextBlock Text="Nuevo Usuario" VerticalAlignment="Center" Margin="25 10"/>-->
+                            </StackPanel>
+                        </ListViewItem>
+                        <ListViewItem x:Name="ItemHome" Height="50">
+                            <StackPanel Orientation="Horizontal">
+                                <materialDesign:PackIcon Kind="Search" Height="25" Width="25" Margin="5"/>
+                                <!--<TextBlock Text="Búsuqeda" VerticalAlignment="Center" Margin="25 10"/>-->
+                            </StackPanel>
+                        </ListViewItem>
+                        </StackPanel>
+                    </ListView>
+
+                    <!--<ToolBar  ClipToBounds="False" Background="#FF31577E">
+                            <Button ToolTip="Nuevo usuario" Margin="0" Background="Transparent" BorderThickness="0" Height="27">
+                                <materialDesign:PackIcon Kind="UserEdit" Foreground="#FF5C99D6"  Width="25" Height="25" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
                             </Button>
-                            <Button ToolTip="Save" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5,0,0,0" Background="Transparent" BorderThickness="0">
-                                <materialDesign:PackIcon Kind="Search" Foreground="LawnGreen" Width="25" Height="25" />
+                            <Button ToolTip="Búsqueda" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5,0,0,0" Background="Transparent" BorderThickness="0">
+                                <materialDesign:PackIcon Kind="Search" Foreground="#FF5C99D6" Width="25" Height="25" />
                             </Button>
                             
-                        <!--</ToolBar>-->
-                    </StackPanel>
-                        </Grid>
+                        </ToolBar>-->
+                    <!--</StackPanel>
+                        </ToolBar>-->
 
 
                     <!--<Rectangle Grid.Column="0" Stroke="#FFABADB3" >
@@ -80,13 +98,13 @@
                 </StackPanel>-->
             </Grid>
 
-                <DataGrid Name="dgUsuarios" AutoGenerateColumns="False" FontFamily="Consolas" FontSize="14" SelectionChanged="DgUsuarios_SelectionChanged" ColumnWidth="*" HeadersVisibility="Column" SelectionMode="Single" VerticalScrollBarVisibility="Visible" Margin="0" Padding="0,0,0,0" Grid.Row="1">
+                <DataGrid Name="dgUsuarios" AutoGenerateColumns="False" FontFamily="Consolas" FontSize="14" SelectionChanged="DgUsuarios_SelectionChanged" ColumnWidth="*" SelectionMode="Single" VerticalScrollBarVisibility="Visible" Margin="0" Padding="0,0,0,0" Grid.Row="1">
 
 
-                    <DataGrid.Resources>
+                    <!--<DataGrid.Resources>
                     <SolidColorBrush x:Key="{x:Static SystemColors.InactiveSelectionHighlightBrushKey}" Color="DarkGray"/>
-                    <!--<SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="LightCyan"/>-->
-                </DataGrid.Resources>
+                    --><!--<SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="LightCyan"/>--><!--
+                </DataGrid.Resources>-->
 
                 <DataGrid.ContextMenu>
                     <ContextMenu>
