--- a/ConfiguracionUsuarios/EdicionPermisosWindow.xaml
+++ b/ConfiguracionUsuarios/EdicionPermisosWindow.xaml
@@ -4,12 +4,13 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ConfiguracionUsuarios"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="Editar Permisos Específicos" WindowStartupLocation="CenterOwner" ResizeMode="NoResize" SizeToContent="WidthAndHeight" Height="512">
+        Title="Editar Permisos Específicos" WindowStartupLocation="CenterOwner" ResizeMode="NoResize" SizeToContent="WidthAndHeight" Height="512" Width="420">
 
-    <Grid Width="390" Height="483">
+    <Grid Width="420" Height="512">
         <Grid.RowDefinitions>
-            <RowDefinition Height="36"/>
+            <RowDefinition Height="70"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <!--<Grid Background="#2C3E50" Grid.Row="0"/>-->
@@ -22,9 +23,9 @@
             </Border>
         </Grid>-->
 
-        <ComboBox Name="cbAplicaciones" SelectedIndex="1" VerticalAlignment="Center" HorizontalContentAlignment="Center" SelectionChanged="cbAplicaciones_SelectionChanged" Grid.Row="0" FontFamily="Consolas" FontWeight="Bold" Margin="10,10,230,6" Height="20"/>
-        <Button Content="Aceptar" Grid.Row="1" HorizontalAlignment="Center" Margin="165,0,150,10" VerticalAlignment="Bottom" Width="75" Click="Button_Click"/>
-        <Button Content="Revalidar" HorizontalAlignment="Left" Margin="165,10,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
+        <ComboBox Name="cbAplicaciones" SelectedIndex="1" VerticalAlignment="Top" HorizontalContentAlignment="Left" SelectionChanged="cbAplicaciones_SelectionChanged" Grid.Row="0" FontFamily="Segoe UI" FontWeight="Normal" Margin="10,10,0,0" Height="40" Grid.RowSpan="2" materialDesign:HintAssist.Hint="Aplicación" Style="{StaticResource MaterialDesignFloatingHintComboBox}" HorizontalAlignment="Left" Width="200" VerticalContentAlignment="Center"/>
+        <Button Content="GUARDAR" Grid.Row="1" HorizontalAlignment="Center" Margin="0,0,0,10" VerticalAlignment="Bottom" Click="Button_Click"/>
+        <Button Content="REASIGNAR" HorizontalAlignment="Right" Margin="0,25,10,0" VerticalAlignment="Top" Click="Button_Click_1" Grid.RowSpan="2"/>
         <!--<ListBox Name="lbPermisos" Margin="10,10,10,35" VerticalAlignment="Stretch" SelectionMode="Multiple" Grid.Row="1">
             <ListBox.Resources>
                 <Style TargetType="ListBoxItem">
@@ -56,7 +57,7 @@
                         </GridViewColumn.CellTemplate>
                         <CheckBox Margin="0" x:Name="chkSelectAll" Checked="chkSelectAll_Checked" Unchecked="chkSelectAll_Unchecked" HorizontalAlignment="Left"  HorizontalContentAlignment="Left" />
                     </GridViewColumn>
-                    
+
                     <GridViewColumn Header="Nombre del Permiso" Width="300" DisplayMemberBinding="{Binding Path=NombrePermiso}"/>
                 </GridView>
             </ListView.View>
