--- a/ConfiguracionUsuarios/ListaUsuarios.xaml
+++ b/ConfiguracionUsuarios/ListaUsuarios.xaml
@@ -10,15 +10,11 @@
         <materialDesign:TransitioningContent x:Name="TrainsitionigContentSlide" OpeningEffect="{materialDesign:TransitionEffect SlideInFromLeft, Duration=0:0:0.3}">
             <Grid Name="mainGrid">
                 <Grid.RowDefinitions>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
 
-
-
-
-
-                <Grid Background="#FF31577E" Grid.Row="0" Margin="0">
+                <Grid Background="#FF31577E" Grid.Row="0" Grid.ColumnSpan="2" Margin="0">
 
 
                     <!--<ToolBar Background="#FF31577E">
@@ -26,18 +22,18 @@
 
                     <ListView x:Name="ListViewMenu" Height="{Binding ElementName=SupaWindows, Path=Height}" Foreground="#FF5C99D6" Background="Transparent" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled">
                         <StackPanel Orientation="Horizontal">
-                        <ListViewItem x:Name="ItemConfiguration" Height="50">
-                            <StackPanel Orientation="Horizontal">
-                                <materialDesign:PackIcon Kind="UserPlus" Height="25" Width="25" Margin="5"/>
-                                <!--<TextBlock Text="Nuevo Usuario" VerticalAlignment="Center" Margin="25 10"/>-->
-                            </StackPanel>
-                        </ListViewItem>
-                        <ListViewItem x:Name="ItemHome" Height="50">
-                            <StackPanel Orientation="Horizontal">
-                                <materialDesign:PackIcon Kind="Search" Height="25" Width="25" Margin="5"/>
-                                <!--<TextBlock Text="Búsuqeda" VerticalAlignment="Center" Margin="25 10"/>-->
-                            </StackPanel>
-                        </ListViewItem>
+                            <ListViewItem x:Name="ItemConfiguration" Height="50">
+                                <StackPanel Orientation="Horizontal">
+                                    <materialDesign:PackIcon Kind="UserPlus" Height="25" Width="25" Margin="5"/>
+                                    <!--<TextBlock Text="Nuevo Usuario" VerticalAlignment="Center" Margin="25 10"/>-->
+                                </StackPanel>
+                            </ListViewItem>
+                            <ListViewItem x:Name="ItemHome" Height="50">
+                                <StackPanel Orientation="Horizontal">
+                                    <materialDesign:PackIcon Kind="Search" Height="25" Width="25" Margin="5"/>
+                                    <!--<TextBlock Text="Búsuqeda" VerticalAlignment="Center" Margin="25 10"/>-->
+                                </StackPanel>
+                            </ListViewItem>
                         </StackPanel>
                     </ListView>
 
@@ -57,7 +53,8 @@
                     <!--<Rectangle Grid.Column="0" Stroke="#FFABADB3" >
                     <Rectangle.Fill>
                     <SolidColorBrush Color="#FF1885A1"/>
-                </Rectangle.Fill>--><!--
+                </Rectangle.Fill>-->
+                    <!--
                 </Rectangle>
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Stretch">
 
@@ -65,45 +62,51 @@
                         <Image Source="/ConfiguracionUsuarios;component/Resources/nuevo_64x64.png" Width="32" Height="32" />
                     </Button>
 
-                    --><!--<Button x:Name="btnEliminarUsuario" Click="BtnEliminarUsuario_Click" Style="{StaticResource roundButtonTemplate48}" ToolTip="Exportar lista a planilla de cálculos (CTRL+X)"  HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="2,5,5,5" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}">
+                    -->
+                    <!--<Button x:Name="btnEliminarUsuario" Click="BtnEliminarUsuario_Click" Style="{StaticResource roundButtonTemplate48}" ToolTip="Exportar lista a planilla de cálculos (CTRL+X)"  HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="2,5,5,5" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}">
                     <Image Source="/ConfiguracionUsuarios;component/Resources/quitar_64x64.png" Width="48" Height="48" />
                 </Button>-->
 
                     <!--<Button x:Name="btnBuscarPedido" Style="{StaticResource roundButtonTemplate32}" ToolTip="Buscar un pedido en la Base de Datos (CTRL+B)" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}">
                     <Image Source="/ConfiguracionUsuarios;component/Resources/lupa_64x64.png" VerticalAlignment="Center" HorizontalAlignment="Center" Width="28" Height="28" />
-                </Button>--><!--
+                </Button>-->
+                    <!--
 
                     <Button x:Name="btnBuscarPedido" Style="{StaticResource roundButtonTemplate32gray}" ToolTip="Buscar un pedido en la Base de Datos (CTRL+B)" VerticalAlignment="Center" HorizontalAlignment="Center"  Margin="2,0,0,0" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}" Width="44" Height="44">
                         <Image Source="/IngresoPedidos;component/Resources/search.png" VerticalAlignment="Center" HorizontalAlignment="Center" Width="32" Height="32" />
                     </Button>
 
-                    --><!--<Button x:Name="btnEditarPermisos" Click="btnEditarPermisos_Click" Style="{StaticResource roundButtonTemplate48}" ToolTip="Filtrar la lista por Estado (CTRL+F)" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2,5,5,5" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}">
+                    -->
+                    <!--<Button x:Name="btnEditarPermisos" Click="btnEditarPermisos_Click" Style="{StaticResource roundButtonTemplate48}" ToolTip="Filtrar la lista por Estado (CTRL+F)" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2,5,5,5" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}">
                     <Image Source="/ConfiguracionUsuarios;component/Resources/lapiz_64x64.png" VerticalAlignment="Center" HorizontalAlignment="Center" Width="48" Height="48" />
-                </Button>--><!--
+                </Button>-->
+                    <!--
 
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                    --><!--<Border BorderThickness="0"  CornerRadius="12" Background="#225378" HorizontalAlignment="Right" Margin="0,0,5,0" VerticalAlignment="Center" Height="36">
+                    -->
+                    <!--<Border BorderThickness="0"  CornerRadius="12" Background="#225378" HorizontalAlignment="Right" Margin="0,0,5,0" VerticalAlignment="Center" Height="36">
                     <Label Name="lblNombreUsuario" Content="Sebastian Sanchez" Margin="0" Foreground="#ECF0F1" VerticalContentAlignment="Center" TextOptions.TextFormattingMode="Display" Padding="5,0" HorizontalContentAlignment="Center"  Background="{x:Null}" FontFamily="Consolas" BorderBrush="{x:Null}" FontWeight="Bold"/>
                 </Border>-->
 
                     <!--<Button x:Name="btnCambiarContraseña" Style="{StaticResource roundButtonTemplate32}" ToolTip="Cambiar contraseña" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="5,5,2,5" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{DynamicResource {x:Static SystemColors.ControlDarkBrushKey}}" Width="36" Height="36">
                     <Image Source="/ConfiguracionUsuarios;component/Resources/llave_64x64.png" Width="32" Height="32" />
-                </Button>--><!--
+                </Button>-->
+                    <!--
 
                     <Button x:Name="btnCerrarSesion" Style="{StaticResource roundButtonTemplate32}" ToolTip="Cerrar sesión" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="2,5,5,5" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}" Width="36" Height="36">
                         <Image Source="/ConfiguracionUsuarios;component/Resources/puerta_64x64.png" Width="32" Height="32" VerticalAlignment="Center" />
                     </Button>
 
                 </StackPanel>-->
-            </Grid>
+                </Grid>
 
                 <DataGrid Name="dgUsuarios" AutoGenerateColumns="False" FontFamily="Consolas" FontSize="14" SelectionChanged="DgUsuarios_SelectionChanged" ColumnWidth="*" SelectionMode="Single" VerticalScrollBarVisibility="Visible" Margin="0" Padding="0,0,0,0" Grid.Row="1">
 
 
                     <DataGrid.Resources>
-                    <!--<SolidColorBrush x:Key="{x:Static SystemColors.InactiveSelectionHighlightBrushKey}" Color="DarkGray"/>-->
-                    <!--<SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="LightCyan"/>-->
+                        <!--<SolidColorBrush x:Key="{x:Static SystemColors.InactiveSelectionHighlightBrushKey}" Color="DarkGray"/>-->
+                        <!--<SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="LightCyan"/>-->
                         <!--<Style TargetType="{x:Type DataGridCell}" x:Key="CStyle">
                             <Style.Setters>
                                 <Setter Property="HorizontalContentAlignment" Value="Left"/>
@@ -115,7 +118,7 @@
                                 </Setter>
                             </Style.Setters>
                         </Style>-->
-                </DataGrid.Resources>
+                    </DataGrid.Resources>
 
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="LEGAJO" Binding="{Binding LegajoUsuario}"/>
@@ -147,44 +150,44 @@
 
 
                     <DataGrid.ContextMenu>
-                    <ContextMenu>
-                        <MenuItem x:Name="ctxmnuEditarusuario" Click="ctxmnuEditarusuario_Click" Header="Editar datos" InputGestureText="Ctrl+E">
-                            <MenuItem.Icon>
-                                <Image Source="/ConfiguracionUsuarios;component/Resources/lapiz_16x16.ico"/>
-                            </MenuItem.Icon>
-                        </MenuItem>
-                        <MenuItem x:Name="ctxmnuEditarPermisos" Click="btnEditarPermisos_Click" Header="Editar Permisos" InputGestureText="Ctrl+E">
-                            <MenuItem.Icon>
-                                <Image Source="/ConfiguracionUsuarios;component/Resources/lapiz_16x16.ico"/>
-                            </MenuItem.Icon>
-                        </MenuItem>
-                        <Separator/>
-                        <MenuItem x:Name="ctxmnuResetPassword" Click="ctxmnuResetPassword_Click" Header="Blanquear Password" InputGestureText="Ctrl+E">
-                            <MenuItem.Icon>
-                                <Image Source="/ConfiguracionUsuarios;component/Resources/lapiz_16x16.ico"/>
-                            </MenuItem.Icon>
-                        </MenuItem>
-                        <MenuItem x:Name="ctxmnuResetRFID" Click="ctxmnuResetRFID_Click" Header="Blanquear RFID" InputGestureText="Ctrl+E">
-                            <MenuItem.Icon>
-                                <Image Source="/ConfiguracionUsuarios;component/Resources/lapiz_16x16.ico"/>
-                            </MenuItem.Icon>
-                        </MenuItem>
-                        <Separator/>
+                        <ContextMenu>
+                            <MenuItem x:Name="ctxmnuEditarusuario" Click="ctxmnuEditarusuario_Click" Header="Editar datos" InputGestureText="Ctrl+E">
+                                <MenuItem.Icon>
+                                    <Image Source="/ConfiguracionUsuarios;component/Resources/lapiz_16x16.ico"/>
+                                </MenuItem.Icon>
+                            </MenuItem>
+                            <MenuItem x:Name="ctxmnuEditarPermisos" Click="btnEditarPermisos_Click" Header="Editar Permisos" InputGestureText="Ctrl+E">
+                                <MenuItem.Icon>
+                                    <Image Source="/ConfiguracionUsuarios;component/Resources/lapiz_16x16.ico"/>
+                                </MenuItem.Icon>
+                            </MenuItem>
+                            <Separator/>
+                            <MenuItem x:Name="ctxmnuResetPassword" Click="ctxmnuResetPassword_Click" Header="Blanquear Password" InputGestureText="Ctrl+E">
+                                <MenuItem.Icon>
+                                    <Image Source="/ConfiguracionUsuarios;component/Resources/lapiz_16x16.ico"/>
+                                </MenuItem.Icon>
+                            </MenuItem>
+                            <MenuItem x:Name="ctxmnuResetRFID" Click="ctxmnuResetRFID_Click" Header="Blanquear RFID" InputGestureText="Ctrl+E">
+                                <MenuItem.Icon>
+                                    <Image Source="/ConfiguracionUsuarios;component/Resources/lapiz_16x16.ico"/>
+                                </MenuItem.Icon>
+                            </MenuItem>
+                            <Separator/>
 
 
 
-                        <MenuItem x:Name="ctxmnuEliminarUsuario"  Click="BtnEliminarUsuario_Click" Header="Activar/Desactivar" InputGestureText="Ctrl+E">
-                            <MenuItem.Icon>
-                                <Image Source="/ConfiguracionUsuarios;component/Resources/quitar_16x16.ico"/>
-                            </MenuItem.Icon>
+                            <MenuItem x:Name="ctxmnuEliminarUsuario"  Click="BtnEliminarUsuario_Click" Header="Activar/Desactivar" InputGestureText="Ctrl+E">
+                                <MenuItem.Icon>
+                                    <Image Source="/ConfiguracionUsuarios;component/Resources/quitar_16x16.ico"/>
+                                </MenuItem.Icon>
 
 
-                        </MenuItem>
+                            </MenuItem>
 
-                    </ContextMenu>
-                </DataGrid.ContextMenu>
+                        </ContextMenu>
+                    </DataGrid.ContextMenu>
 
-                <!--<DataGrid.ColumnHeaderStyle>
+                    <!--<DataGrid.ColumnHeaderStyle>
                     <StaticResource ResourceKey="ColumnHeaderStyle"/>
                 </DataGrid.ColumnHeaderStyle>
                 <DataGrid.CellStyle>
@@ -194,10 +197,10 @@
                     <StaticResource ResourceKey="DataGridRowZebra"/>
                 </DataGrid.RowStyle>-->
 
-                <!--<DataGrid.Columns>-->
-                
+                    <!--<DataGrid.Columns>-->
 
-                <!--<DataGridTextColumn Header="LEGAJO" Binding="{Binding LegajoUsuario}"  />
+
+                    <!--<DataGridTextColumn Header="LEGAJO" Binding="{Binding LegajoUsuario}"  />
                 <DataGridTextColumn Header="APELLIDO" Binding="{Binding ApellidoUsuario}" />
                 <DataGridTextColumn Header="NOMBRE" Binding="{Binding NombreUsuario}"/>
                 <DataGridTemplateColumn Header="PASSWORD" CanUserResize="False" Width="*">
@@ -207,8 +210,8 @@
                                 <TextBlock.Style>
                                     <Style TargetType="TextBlock">
                                         -->
-                <!--<Setter Property="Text" Value="N/A" />-->
-                <!--
+                    <!--<Setter Property="Text" Value="N/A" />-->
+                    <!--
                                         <Style.Triggers>
                                             <DataTrigger Binding="{Binding HashedPassword, TargetNullValue=NULL}">
                                                 <Setter Property="Text" Value="YES" />
@@ -239,18 +242,29 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
                 -->
-                <!--<DataGridTextColumn Header="CONTRASEÑA" Binding="{Binding HashedPassword}"/>
+                    <!--<DataGridTextColumn Header="CONTRASEÑA" Binding="{Binding HashedPassword}"/>
                 <DataGridTextColumn Header="RFID" Binding="{Binding HashedRFID}"/>-->
-                <!--
+                    <!--
             </DataGrid.Columns>-->
-            </DataGrid>
-            <!--<Button Content="Dar de baja" HorizontalAlignment="Left" Margin="424,10,0,0" VerticalAlignment="Top" Width="75" Height="23"/>
+                </DataGrid>
+                
+
+                <!--<TextBox Grid.Column="1" Width="150" HorizontalAlignment="Center" Margin="0,70,0,0" materialDesign:HintAssist.Hint="D.N.I" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                <TextBox Grid.Column="1" Width="150" HorizontalAlignment="Center" Margin="0,110,0,0" materialDesign:HintAssist.Hint="e-mail Personal" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                <TextBox Grid.Column="1" Width="150" HorizontalAlignment="Center" Margin="0,140,0,0" materialDesign:HintAssist.Hint="e-mail Interno" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                <TextBox Grid.Column="1" Width="150" HorizontalAlignment="Center" Margin="0,180,0,0" materialDesign:HintAssist.Hint="Dirección" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                <TextBox Grid.Column="1" Width="150" HorizontalAlignment="Center" Margin="0,220,0,0" materialDesign:HintAssist.Hint="Fecha de Nacimiento" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                <TextBox Grid.Column="1" Width="150" HorizontalAlignment="Center" Margin="0,260,0,0" materialDesign:HintAssist.Hint="Teléfono" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                <TextBox Grid.Column="1" Width="150" HorizontalAlignment="Center" Margin="0,300,0,0" materialDesign:HintAssist.Hint="Fecha de Ingreso" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>-->
+
+
+                <!--<Button Content="Dar de baja" HorizontalAlignment="Left" Margin="424,10,0,0" VerticalAlignment="Top" Width="75" Height="23"/>
         <Button Content="Reset Pass." HorizontalAlignment="Left" Margin="424,10,0,0" VerticalAlignment="Top" Width="75" Height="23"/>
         <Button Content="NuevoUser" HorizontalAlignment="Left" Margin="584,10,0,0" VerticalAlignment="Top" Width="75" Height="23"/>
         <Button Content="Editar" HorizontalAlignment="Left" Margin="504,10,0,0" VerticalAlignment="Top" Width="75" Height="23"/>
         <Button Content="Guardar " HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top" Width="75" Height="23"/>-->
-    </Grid>
-    </materialDesign:TransitioningContent>
-        
+            </Grid>
+        </materialDesign:TransitioningContent>
+
     </Grid>
 </UserControl>
